--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,13 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <title>Quotes</title>
   </head>
   <body>
     <div class="container">
-     <div class="header">
-         <h1 align="center">Quotes</h1>
+     <div class="header" style="background-color:black">
+         <h1 align="center" style="color:white"
+         >Quotes</h1>
      </div>
+     <br>
+     <div class="button">
+       <button type="button" name="button">Add<span class="glyphicon glyphicon-plus"></span></button>
+     </div>
+
 
 
     </div>
