--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -13,7 +13,7 @@
      </div>
      <br>
      <div class="button">
-       <button type="button" name="button">Add<span class="glyphicon glyphicon-plus"></span></button>
+       <button (click)="showForm" type="button" name="button">Add<span class="glyphicon glyphicon-plus"></span></button>
      </div>
 
 
