--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -1,3 +1,33 @@
-<p>
-  quotes-form works!
-</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <form #quotesForm='ngForm'*ngIf="hide">
+        <div class=" group">
+
+          <label id="name">Enter Your Name </label>
+          <br>
+          <br>
+          <input type="text" name="" value="" style="float:left">
+          <br>
+          <br>
+          <label>Enter your quote</label>
+          <br>
+          <textarea name="name" rows="8" cols="60"></textarea>
+          <br>
+        </div>
+        <button (click)="addQuote" class="btn btn-primary" name="button">Post Quote</button>
+      </form>
+
+    </div>
+  </div>
+</body>
+
+</html>
