--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-image:url("https://wallpapercave.com/wp/wp2453566.jpg");
+background-size:cover;
+background-repeat:none;
+}
