--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <style type="text/css">
-      body{
-        background-image:url("https://wallpapercave.com/wp/wp2453566.jpg");
-      background-size:cover;
-      background-repeat:none;
-    }
-    </style>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -24,8 +17,10 @@
        </div>
        <br>
        <p>Click the button to write quote!</p>
-       <div class="btn btn-primary">
-         <button style="color:black"(click)="showForm" type="button" name="button">Add<span class="glyphicon glyphicon-plus"></span></button>
+       <div class="quotes">
+         <ul>
+           <li *ngFor="let quote of quotes">{{quote.name}}</li>
+         </ul>
        </div>
        <app-quotes-form></app-quotes-form>
     </div>
