Put flex style on the body

--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -28,7 +28,7 @@
 
     </div>
     <div class="btn btn-primary">
-      <button style="color:black" (click)="showForm()" type="button" name="button">Add<span class="glyphicon glyphicon-plus"></span></button>
+      <button style="color:black" (click)="showForm()" type="button" name="button">Write quote<span class="glyphicon glyphicon-plus"></span></button>
     </div>
   </div>
 </body>
