--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -17,19 +17,24 @@
        </div>
        <br>
        <p>Click the button to write quote!</p>
-       <div class="vote">
-         <ul>
-           <li *ngFor="let quote of quotes">{{quote.name}}<br>
-             <div class="vote">
-             <button type="button" name="button">Like</button>
-             <button type="button" name="button">unlike</button>
-             </div>
-             <br>
-             <button type="button" name="button">Delete</button>
-           </li>
-         </ul>
+         <br>
+       <div class="content">
+         <app-quotes-form></app-quotes-form>
+         <div class="vote">
+           <ul>
+             <li *ngFor="let quote of quotes">{{quote.name}}<br>
+               <div class="vote">
+               <button type="button" name="button">Like</button>
+               <button type="button" name="button">unlike</button>
+               </div>
+               <br>
+               <button type="button" name="button">Delete</button>
+             </li>
+           </ul>
+         </div>
        </div>
-       <app-quotes-form></app-quotes-form>
+
+
     </div>
 
 
