--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,8 +21,9 @@
          <br>
        <div class="content">
          <app-quotes-form></app-quotes-form>
-         <div class="vote">
+
            <ul>
+
              <li *ngFor="let quote of quotes">{{quote.name}}<br>
                <div class="vote">
                <button type="button" name="button">Like</button>
@@ -30,8 +32,9 @@
                <br>
                <button type="button" name="button">Delete</button>
              </li>
+
            </ul>
-         </div>
+
        </div>
 
 
