--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>Quotes</title>
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="panel panel-primary">
-       <div class="panel-heading">
-           <h1 align="center" style="color:white"
-           >Quotes</h1>
-       </div>
-       </div>
-       <br>
-       <p>Click the button to write quote!</p>
-         <br>
-       <div class="content">
-         <app-quotes-form></app-quotes-form>
+<head>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-           <ul>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <title>Quotes</title>
+</head>
 
-             <li *ngFor="let quote of quotes">{{quote.name}}<br>
-               <div class="vote">
-               <button type="button" name="button">Like</button>
-               <button type="button" name="button">unlike</button>
-               </div>
-               <br>
-               <button type="button" name="button">Delete</button>
-             </li>
+<body>
+  <div class="container-fluid">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h1 align="center" style="color:white">Quotes</h1>
+      </div>
+    </div>
+    <br>
+    <p>Click the button to write quote!</p>
+    <br>
+    <div class="content">
+      <app-quotes-form></app-quotes-form>
 
-           </ul>
+      <ul>
 
-       </div>
+        <li *ngFor="let quote of quotes">
+          <p>{{quote.name}}</p> <br>
+          <div class="vote">
+            <button type="button" name="button">Like</button>
+            <button type="button" name="button">unlike</button>
+          </div>
+          <br>
+          <button type="button" name="button">Delete</button>
+        </li>
 
+      </ul>
 
     </div>
 
 
+  </div>
 
-  </body>
+
+
+</body>
+
 </html>
