Add an author and time

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,3 +1,11 @@
-<p>
-  quote-details works!
-</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <p>Author{{quote.author}}</p>
+    <p>Time Created{{quote.time}}</p>
+  </body>
+</html>
