Spaced the post quote button and write quote

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -5,7 +5,8 @@
     <title></title>
   </head>
   <body>
-    <p>Author{{quote.author}}</p>
-    <p>Time Created{{quote.time}}</p>
+    <!-- <p>{{quote.name}}</p> -->
+    <!-- <p>Author : {{quote.description}}</p>
+    <p> Date : {{quote.date}}</p> -->
   </body>
 </html>
