--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,4 +1,9 @@
 p{
-  font-size: 20px;
+  font-size: 40px;
+  font-weight: bolder;
   font-family: 'Allura', cursive;
+}
+.vote p{
+  font-family: 'Handlee', cursive;
+  font-size: 20px;
 }
