--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -23,22 +23,8 @@
     <div class="content">
       <app-quotes-form></app-quotes-form>
 
-      <ul>
 
-        <li *ngFor="let quote of quotes,let index = i"> <app-quote-details> [quote]='quote' </app-quote-details>
-        {{quote.name}}<br>
-          <div class="vote">
-            <button type="button"(click)="addVote($event,1)" name="button">Like</button>
-            <p class="addVote">0</p>
-            <button type="button" (click)="reduceVote($event,1)"
-           name="button">unlike</button>
-           <p>0</p>
-          </div>
-
-          <button (delete) = 'quoteDelete(true)'> Delete Quote </button>
-        </li>
-
-      </ul>
+          <app-quote-details > </app-quote-details>
 
     </div>
 
