--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
- <div *ngFor='let quote of quotes'>
+ <div *ngFor='let quote of quotes,let i = index'>
    <ul>
      <li>
        <p >Author : {{quote.description}}</p>
@@ -13,14 +13,12 @@
        <p>{{quote.name}}</p> <br>
 
      <div class="vote">
-       <button type="button"(click)="addVote($event,1)" name="button">Like</button>
-       <p class="addVote">0</p>
-       <button type="button" (click)="reduceVote($event,1)"
-      name="button">unlike</button>
-      <p>0</p>
+       <button class="btn-primary"(click)="upVote()" name="button">Like {{addVote}}</button>
+       <button class = "btn-primary"(click)="downVote()"
+      name="button">UnLike {{reduceVote}}</button>
      </div>
-
-     <button (delete) = 'quoteDelete(true)'> Delete Quote </button></li>
+     <br>
+     <button class="btn-danger" (delete) = 'quoteDelete(true)'> Delete Quote </button></li>
    </ul>
 
   </div>
